docs: refresh CLI skill docs, readmes, mvn wrapper docs
- skills/browser4-cli: SKILL.md + references refresh; add quickstart/decision-trees/quick-patterns
- root README/README.zh, docs/mocksite.md, cli/README.md, .mvn/README.md
- .gitignore: /.buildtmp/